[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/DebugPanel.gd" id="1_script"]

[node name="DebugPanel" type="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -200.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 150.0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Analytics Debug"
horizontal_alignment = 1

[node name="TransformCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Transformations: 0"
horizontal_alignment = 1

[node name="ExportButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Export CSV"

[node name="PrintButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Print Summary"
